redirect output to gui